--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.23.3",
-    "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "parcel": "^2.6.2",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.53.0"
