--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --no-scope-hoist"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Aditya Yadav",
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.23.3",
-    "fracty": "^1.0.11",
+    "fractional": "^1.0.0",
     "parcel": "^2.6.2",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.53.0"
